Fix text overflow in song name

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -220,6 +220,7 @@ header {
 .artist {
     color: #959595;
     font-size: 1.3em;
+    text-overflow: ellipsis;
 }
 
 .share-message {
